# AgentFlowDesk

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
agentflow/: __init__.py  cli.py  context_builder.py  errors.py  exporters.py  git_tools.py  models.py  paths.py  review.py  runner.py  storage.py
docs/: agent-adapters.md  context-pack.md  design.md  pain-points.md
examples/: sprint.yml
tests/: test_agentflow.py
