[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentflowdesk"
version = "0.1.0"
description = "A local-first task board and context manager for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "OracleNep" }]
keywords = ["ai-agent", "coding-agent", "context-engineering", "developer-tools", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agentflow = "agentflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
